--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "author": "Dylan Abrahams",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.4.0"
   }
 }
-
