--- a/package.json
+++ b/package.json
@@ -1,21 +1,68 @@
 {
-  "name": "repos",
+
+  "name": "team1projecttech",
+
   "version": "1.0.0",
-  "description": "Dylans Project Tech",
-  "main": "index.js",
+
+  "description": "This is the team project for ptroject tech blok 3",
+
+  "main": "server.js",
+
   "scripts": {
-    "dev": "nodemon server.js"
+
+    "dev": "npx eslint server.js && nodemon server.js"
+
   },
+
   "keywords": [
+
+    "tech",
+
     "mijn",
+
     "project"
+
   ],
-  "author": "Dylan Abrahams",
+
+  "author": "Sybren Loos, Dylan Abrahams, Ruben Beck, Sem van Wijk, Liam van Bart",
+
   "license": "ISC",
+
   "dependencies": {
+
+    "bcrypt": "^5.1.1",
+
+    "compression": "^1.7.4",
+
     "dotenv": "^16.4.5",
+
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "mongodb": "^6.4.0"
+
+    "express": "^4.18.3",
+
+    "express-session": "^1.18.0",
+
+    "express-validator": "^7.0.1",
+
+    "mongodb": "^6.4.0",
+
+    "multer": "^1.4.5-lts.1",
+
+    "node": "^21.7.0",
+
+    "nodemon": "^3.1.0",
+
+    "uglify-js": "^3.17.4",
+
+    "xss": "^1.0.15"
+
+  },
+
+  "devDependencies": {
+
+    "eslint": "^8.57.0"
+
   }
+
 }
+
